-   The broken painting of notes with the mouse.
-   Enhanced sequence::partial\_assign(), adding missing members.
-   Pasting a pattern now sets the pattern number to the slot
    receiving the pattern.
-   Some style sheets have been tweaked to fix time/piano-roll
    alignment issues.
-   Other UI/keystroke fixes, fixes to counting sequences.

## [0.99.19] - 2025-03-02

### Fixed

-   Issue #136.
    -   Filtered out Program events from the drum-mode piano roll.
    -   Can now drag Program events up and down in the data pane.
        -   While working this issue, the following problems
            were found and fixed.
            -   The saving of Program events was fixed to calculate
                the proper time-stamp.
            -   Program events can be moved up and down by dragging,
                as well as by the line-dragging method.
        -   Added display of the names of Control and Program
            Change numbers in the event editor and pattern editor..
-   Pressing the finger button in the pattern editor now
    also enters paint mode in the event pane. The selected event
    category can the be entered by a click, and then moved up and
    down in the data pane.

### Added

-   This macro is defined by default: SEQ66\_SHOW\_GM\_PROGRAM\_NAME
    to show the GM patch names in the pattern editor data pane
    instead of just the patch/program number. See seq66\_features.h.
-   Added a new configuration file, '.patches' that can be used
    to show non-GM device program names in lieu of the built-in
    GM program name. Also specifiable in the Preferences / Session
    tab.

## [0.99.18] - 2025-02-03

More developer-discovered issues :-(

### Added

-   Added the dark-theme and dark-ui options to the user file for
    handling GUI elements that are otherwise difficult to see.
-   Added an option to dump the current palette while automatically
    inverting to create the --invert palette. It's activated by the