@@ -6,7 +6,7 @@
 % \library     Documents
 % \author      Chris Ahlstrom
 % \date        2021-01-18
-% \update      2025-05-22
+% \update      2025-05-28
 % \version     $Revision$
 % \license     $XPC_GPL_LICENSE$
 %
@@ -864,8 +864,6 @@
    mutually exclusive.
    See \sectionref{sec:recording}, which details how the record-by features
    work.
-
-   The record-by flags should probably be in the 'usr' file.
 
 \subsubsection{'rc' File / MIDI File Tweaks}
 \label{subsubsec:configuration_rc_midi_file_tweaks}
